Hybration is added

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,7 +13,7 @@
     "event": "Event",
     "tasawwuf": "Tasawof",
     "graduation": "Graduation",
-    "sanad": "Sanad",
+    "sanad": "Shajara",
     "contact": "Contact",
     "islamicLearningPlatform": "Islamic Learning Platform",
     "more": "More",
@@ -399,11 +399,11 @@
     "graduatesDescription": "Highlighting the achievements and journeys of students who have successfully completed their courses",
     "loadingGraduates": "Loading graduates...",
     "viewAllGraduation": "View All Graduation",
-    "ourSanad": "Our Sanad",
-    "sanadHighlight": "Sanad",
-    "sanadDescription": "Discover our spiritual lineage and the blessed chain of transmission",
-    "loadingSanad": "Loading Sanad...",
-    "viewAllSanad": "View All Sanad",
+    "ourShajara": "Our Shajara",
+    "shajaraHighlight": "Shajara",
+    "shajaraDescription": "Discover our spiritual lineage and the blessed chain of transmission",
+    "loadingShajara": "Loading Shajara...",
+    "viewAllShajara": "View All Shajara",
     "readOurBlog": "Read Our Blog",
     "exploreOurBlog": "Blog",
     "blogHighlight": "Blog",
