--- a/src/locales/prs/common.json
+++ b/src/locales/prs/common.json
@@ -13,7 +13,7 @@
     "event": "رویداد",
     "tasawwuf": "تصوف",
     "graduation": "فارغ التحصیلی",
-    "sanad": "سند",
+    "sanad": "شجره",
     "contact": "تماس",
     "islamicLearningPlatform": "پلتفرم آموزش اسلامی",
     "more": "بیشتر",
@@ -416,11 +416,11 @@
     "graduatesDescription": "برجسته کردن دستاوردها و سفرهای دانشجویانی که با موفقیت دوره‌های خود را تکمیل کرده‌اند",
     "loadingGraduates": "بارگذاری فارغ‌التحصیلان...",
     "viewAllGraduation": "مشاهده همه فارغ‌التحصیلی‌ها",
-    "ourSanad": "سند ما",
-    "sanadHighlight": "سند",
-    "sanadDescription": "نسب معنوی و زنجیره مبارک انتقال ما را کشف کنید",
-    "loadingSanad": "بارگذاری سند...",
-    "viewAllSanad": "مشاهده همه سندها",
+    "ourShajara": "شجره ما",
+    "shajaraHighlight": "شجره",
+    "shajaraDescription": "نسب معنوی و زنجیره مبارک انتقال ما را کشف کنید",
+    "loadingShajara": "بارگذاری شجره...",
+    "viewAllShajara": "مشاهده همه شجره‌ها",
     "readOurBlog": "وبلاگ ما را بخوانید",
     "exploreOurBlog": " بلاگ",
     "blogHighlight": "وبلاگ",
