--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -553,21 +553,21 @@
     "academicServices": "د جامعې علمي خدمتونه",
     "teachingDescription": "په نوموړې مدرسه کې د ديني او عصري علومو تدریس په منظم ډول تر سره کېږي، چې مهمې څانګې یې دا دي:",
     "subjectsList": [
-      "تجوید",
-      "حفظ", 
-      "تفسیر",
-      "حدیث",
-      "فقه",
-      "اصول الفقه",
-      "منطق",
-      "معاني",
-      "صرف",
-      "نحو",
-      "حکمت",
-      "ریاضي",
-      "انګلیسي",
-      "عربي",
-      "فن بیان"
+      "۱. تجوید",
+      "۲. حفظ",
+      "۳. تفسیر",
+      "۴. حدیث",
+      "۵. فقه",
+      "۶. اصول الفقه",
+      "۷. منطق",
+      "۸. معاني",
+      "۹. صرف",
+      "۱۰. نحو",
+      "۱۱. حکمت",
+      "۱۲. ریاضي",
+      "۱۳. انګلیسي",
+      "۱۴. عربي",
+      "۱۵. فن بیان"
     ],
     "teachingMethods": "دغه علوم په درجوي (صنفي) او متفرقه ډول تدریس کېږي.",
     "teachersAndScholars": "د جامعې مشایخ او استادان",
@@ -595,8 +595,94 @@
     "graduatesDescription": "د تېرو پنځلسو کلونو په ترڅ کې شاوخوا ۷۰۰ تنه فارغین یې د علمي پړاوونو څخه فارغ شوي او ټولنې ته وړاندې شوي دي.",
     "teacherQualifications": "د استادانو علمي سویه",
     "teacherQualificationsDesc": "د جامعې استادان د لوړو علمي سطحو څښتنان دي، چې د ماسټري، دوکتورا او تخصصي درجې لري.",
+    "founderBiography": {
+      "introduction": "انوار المشایخ جناب حضرت مولانا مؤید الدین خلیفه صاحب فضل الدین مشهور په خلیفه صاحب د ارغندی رحمه الله",
+      "preamble": "د افغانستان له نومياليو عالمانو او لویو عارفانو څخه ؤ.",
+      "father": "پلار یې محمد زرين نومېده چې یو نیک خویه او متقی انسان و. نوموړي تقريبا (۶) کاله د خپل کلي په ښوونځي کې ليک لوست زده کړه.",
+      "educationJourney": "د تفسیر د زده کړې دپاره د جناب شیخ الحدیث حضرت مولانا عبدالغفار ننگرهاری نوموړي د شیخ الحدیث حضرت مولانـا نـصـير الـدين غرغشتوی قدس سره شاګرد او د غزني په نورالمدارس مدرسه کې شیخ الحديث ؤ.",
+      "travelToKabul": "ده ته ورغی او د تفسیر علم یې ترېنه حاصل کړ بیا د حديثو د زده کړې لپاره کابل ته راغی او د شیخ الحدیث حضرت مولانا سلطان جان صاحب نه يي سند او اجازه د حدیثو واخیسته او په ۱۳۳۶هـ.ش کال د قلعـه جـواد کې د حضرت صاحب د مدرسې نه فارغ شو.",
+      "spiritualJourney": "خليفـه صـاحب قدس الله سره د طـالـب علمـی پـه دوران کی د حضرت نورالمشايخ فضل عمر مجددي قدس الله سره سره بيعت وکړ بیا چی کله حضرت نورالمشایخ صاحب نور الله مرقده وفات شو نو د بیعت تجديد يې له حضرت ضياء المشايخ محمد ابراهیم جان مجددی قدس الله سره وکړ او په ۱۳۴۹هـ.ش کال د علم باطن نه فارغ اود سلوک منازل يې سرته ورسول اود جناب حضرت ضياء المشايخ صاحب په مبارکو لاسونو ورته د خلافت دستار وتړل شـو.",
+      "firstMadrasa": "کلـه چې حضرت خلیفه صاحب قدس سره د ظاهري او باطنی علومو څخه فارغ شو نو په تدريس يې شروع وکړه د میدان ولایت د چارکی په مدرسه کې يې څه موده تیره کړه بیاله هغه ځایه د کابل ولایت پغمان ولسوالی برې ارغندۍ د بازید خيلو ته لاړهلته یې په لومړی ځل مدرسه تأسیس کړه",
+      "firstMadrasaDetails": {
+        "qamariDate": "٦ / ١ / ١٣٨٣ هـ ق",
+        "shamsiDate": "٨ / ٣ / ١٣٤٢ هـ ش",
+        "miladiDate": "٢٩ / ٥ / ١٩٦٣ م"
+      },
+      "firstMadrasaTeaching": "او هلته يې تقریبا (۳۰) کاله مروجه دینی علوم ، حدیث او تفسیر درس کړل د لیرو لیرو ځایونو څخه به طالبان ورته راتلل او د حديثو د فراغت سند او اجازه بـه یـې ترینه اخیستله د دې ترڅنګ د باطنی علومو طالبانو به يې لاس نیوی کاوه او د سلوک منازل به یې سرته رسول .",
+      "migration": "نوموړي د تره کي د حکومت په دوره کې له خپل ګران هیواد څخه  هجرت وکړ او د پاکستان په شمالی وزیرستان میرانشاه کې يې استوګنه غوره کړه",
+      "secondMadrasa": "د هجرت په ټاټوبي کې يې یوه ستره ديني مدرسه د انوار العلوم الاسلامیة په نامه دوهم ځل په میرانشاه کې په کال ٦ / ٩ / ١٤٠٥ هـ ق / ۴ / ۳ / ۱۳۶۴ هـ ش جوړه کړه چې په سلګونو طالبانو به په کې ديني علوم زده کول.",
+      "migrationTeaching": "لنډه دا چې خپـل پـاتـې عـمـر يـې هم د هجرت په کور کې په تدریس ، تبلیغ ، دعوت ، ارشاد او د طريقې په تلقین کې تیر کړ. ډير زیات شمیر مسلمانان د ده له برکته د معنوی فیوضاتو څخه برخمن شول.",
+      "character": "خليفـه صـاحب د صـوري او معنـوي فضايلو او کمالاتو خاوند و. په صرف ، نحو ، منطق ، ادب ، اصولو ، حدیثو ، تفسیر ، کلام او فقه کې د خپلی زمانې پیاوړی او برلاسی عالم و او زیات شمیر شاگردان یې درلودل په طریقت او معرفت کې د خپلې زمانې بزرگ .د خدای پیژندني په ډیرو اسرارو او رموزو پوه او پرهیز ګاره شخصیت و زیات شمیر مریدان او شاگردان پرې راټول ؤ.",
+      "death": "حضرت انوار المشائخ خلیفه صاحب ارغندي قدس الله سره،  تـه پـه وروستيو کالو کې سخته مريضي ور پېښه شوه او د هماغې مريضي نـه پـه ۱۹۹۵م كـال وفـات شـو او د میرانشاه د شهیدانو په هدیره کې خاورو ته وسپارل شو.",
+      "funeral": "وايي چې د ده په جنازه کې په زرګونو مسلمانانو شرکت کړی ؤ چې زياتره يـې عالمان او دينې طالبان ؤ",
+      "dream": "د ده څخه وروسـتـه جنـاب تاج المشائخ خلیفه سـدوزی غریقي  صـاحب د ده پـه ځـای کیناست او د ظاهري او باطني علومـو ښـوونه اوروزنه یې طالبانو ته کوله او تاج المشائخ رحمه الله به ویل  چې د ده د مرګ په ورځ یو شخص خوب لیدلی ؤ چې خليفه صاحب ورته وايي طالبانه ، مخلصانه ، عاشقانه میرویم - د ده روح دې تر قيـامـتـه ښـاد وي او د ده فيض دې جـاري وي.",
+      "brothers": {
+        "title": "د ارغندی د خليفـه صـاحب قدس الله سره دوه وروڼه وه",
+        "brother1": "یو ورور ېې محترم احمدزی چې  ده ښو اخلاقوڅښتن اومتقی شخص  وه.",
+        "brother2": "دوهم ورور ېې جناب تاج المشائخ خلیفه صاحب سدوزی غریقي رحمه الله د ارغندی خلیفه صاحب ورور او په علمي ډګر کې ځای ناستی وو . نوموړی د وخت جید عالم ، مدرس ، پیاوړۍ مجاهد او لـوی عـارف وو."
+      },
+      "sons": {
+        "title": "د ارغندي خلیفه صاحب پنځه زامن دي",
+        "son1": "چې مـشر زوى ېې جناب الحاج  قاری صاحب عبدالعلیم فضلي ، چې د ښواخلاقو څښتن اوزړه سواند شخصیت ده.",
+        "son2": "دوهم زوي ېې جناب الحاج خلیفه صاحب نعمت الله فضلي ، چــې د قوي عزم خاوند ، د تصوف او سلوک په ډګر کې د جناب قطب المشائخ لخوا ورته د خلافت دستار ور په سر کړل شو او د خپل والد محترم ، ارغندي خلیفه صاحب ځاي ناستي وګرځېده.",
+        "son3": "درېیم زوي ېې انجینر رحمت الله فضلي ، چې دحلم او زغم نمونه ده.",
+        "son4": "څلورم زوي يې جناب قلب المشائخ الحاج خلیفه صاحب محمدشفیق فضلي دام الله حیاته وفیوضاته جید عالم او کامل متبع د شریعت چې ده.",
+        "son5": "جناب تاج المشائخ رحمه الله د وفات څخه وروسته د انوار العلوم اسلامي مدرسې مهتمم شیخ الحدیث او  دخلیفه صاحب ځاي ناستي ده ، اوس مهال د تصوف اوسلوک په ډګر کې یو لا مثال شخصیت ده ،  د ظاهری اوباطني علومو خدمتونه يې  د پام وړ دي."
+      },
+      "famousKhalifasTitle": "د ده مشهور خليفه ګان چې ده مبارک ورته په خپلو لاسو دخلافت دستار ورپه سر کړي وه هغه دا دي:",
+      "famousKhalifasList": [
+        "سراج المشائخ خلیفه صاحب احمد ضیا قدس الله سره دمیدان وردګو ولایت جغتو ولسوالی",
+        "قطب المشائخ خلیفه صاحب دین محمد قدس الله، د پکتیا ولایت زرمت ولسوالی",
+        "جناب أبو الحسن خليفـه صـاحب مشهور په صوفي صاحب  د لوګر ولایت",
+        "جناب عبد الستار خلیفه صاحب د وخت جـيـد عـالـم او لوی روحاني شخصیت وو د لوګر ولایت",
+        "جناب عبد الرشيد خليفه صاحب د لوګر ولایت",
+        "جناب ملا كل خلیفه صاحب د لوګر ولایت",
+        "جناب نعمت الله خلیفه صاحب د لوګر ولایت",
+        "جناب عثمان غنی خلیفه صاحب اصلا دغزنی ولایت اندړو ولسوالی، فعلاً دپکتیکا ولایت نکه ولسوالی اړوند دی"
+      ],
+      "successorKhalifasTitle": "د جناب ارغندي خليفه صاحب هغه خليفه صاحبان چې منازل د سلوک ېې له ارغندي خلیفه صاحب سره طی کړي وو او د خلافت دستارونه  ورته نورو خلیفه صاحبانو لکه:",
+      "successorKhalifasNote": "فضل المشائخ خلیفه صاحب داد محمد غزنوي قدس الله سره ، خلیفه صاحب  عبدالحکیم مشهور په بشیر خلیفه صاحب قدس الله سره ، قطب المشائخ خلیفه صاحب  دین محمد زرمت قدس الله سره او سراج المشائخ خلیفه صاحب احمد ضياء قدس الله سره تړلي وو په لاندې ترتیب دي:",
+      "successorKhalifasList": [
+        "تاج المشائخ خلیفه صاحب سدوزی غریقي رحمه الله",
+        "جناب خلیفه صاحب نعمت الله فضلي حفظه الله",
+        "شمس المشائخ خلیفه صاحب دین محمد حفظه الله",
+        "نجم المشائخ خلیفه صاحب داد محمد نوري حفظه الله",
+        "روح المشائخ خلیفه صاحب عبدالحی فقیرالله حفظه الله",
+        "قطب المشائخ خلیفه صاحب محمد انور ابو زبېرحفظه الله",
+        "محب المشائخ خلیفه صاحب محمد معراج روحاني رحمه الله",
+        "جناب خلیفه صاحب محمد عباس حفظه الله",
+        "فخر المشائخ جناب خلیفه صاحب محمد اکرم خادم حفظه الله",
+        "جناب خلیفه صاحب محمد هاشم حفظه الله",
+        "جناب خلیفه صاحب عزت الله حفظه الله",
+        "جناب خلیفه صاحب عاشق الرحمن حفظه الله",
+        "جناب خلیفه صاحب اسماعیل جان حفظه الله",
+        "جناب خلیفه صاحب سید محمد حفظه الله",
+        "جناب خلیفه صاحب بهادر رحمه الله",
+        "جناب خلیفه صاحب فهیم حفظه الله",
+        "جناب خلیفه صاحب حمید الله حفظه الله",
+        "جناب خلیفه صاحب رسول محمد حفظه الله",
+        "جناب خلیفه صاحب وزیر حفظه الله"
+      ],
+      "reestablishmentTitle": "د جناب ارغندی خلیفه صاحب کورنی دهجرت له دیارڅخه چې کله بېرته راستنه  شوه نو په دوهم ځل یې دکابل پغمان ارغندی بازید خېل سیمه  کې دمدرسې بنیاد",
+      "reestablishmentFoundation": "دجناب تاج المشائخ خلیفه صاحب سدوزی غریقی. او دارغندی خلیفه صاحب د زامنو، علماءو او دمخورو په لاس  په تاریخ",
+      "reestablishmentDetails": {
+        "qamariDate": "۱۷ / ٦ / ١٤٢٦ هـ ق",
+        "shamsiDate": "۱ / ۵ / ١٣٨۴ هـ ش،، کې ښود ل شو."
+      },
+      "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی ، الله ج دې ترقیامته پورې دا پور نوره  روانه بېړی .روانه لری"
+    },
     "successorKhalifas": "د ځای ناستو خلیفه ګانو نوملړ",
     "successorKhalifasList": [
+      "تاج المشائخ خلیفه صاحب سدوزی غریقي رحمه الله",
+      "جناب خلیفه صاحب نعمت الله فضلي حفظه الله",
+      "شمس المشائخ خلیفه صاحب دین محمد حفظه الله",
+      "نجم المشائخ خلیفه صاحب داد محمد نوري حفظه الله",
+      "روح المشائخ خلیفه صاحب عبدالحی فقیرالله حفظه الله",
+      "قطب المشائخ خلیفه صاحب محمد انور ابو زبېرحفظه الله",
+      "محب المشائخ خلیفه صاحب محمد معراج روحاني رحمه الله",
+      "جناب خلیفه صاحب محمد عباس حفظه الله",
+      "فخر المشائخ جناب خلیفه صاحب محمد اکرم خادم حفظه الله",
+      "جناب خلیفه صاحب محمد هاشم حفظه الله",
       "جناب خلیفه صاحب عزت الله حفظه الله",
       "جناب خلیفه صاحب عاشق الرحمن حفظه الله",
       "جناب خلیفه صاحب اسماعیل جان حفظه الله",
@@ -610,7 +696,7 @@
     "reestablishmentDetails": "دجناب ارغندی خلیفه صاحب کورنی دهجرت له دیارڅخه چې کله بېرته راستنه شوه نو په دوهم ځل یې دکابل پغمان ارغندی بازید خېل سیمه کې دمدرسې بنیاد دجناب تاج المشائخ خلیفه صاحب سدوزی غریقي. او دارغندی خلیفه صاحب د زامنو، علماءو او دمخورو په لاس په تاریخ",
     "reestablishmentDate1": "۱۷ / ٦ / ١٤٢٦ هـ ق",
     "reestablishmentDate2": "۱ / ۵ / ١٣٨۴ هـ ش",
-    "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی، الله ج دې ترقیامته پورې دا پور نوره روانه بېړی. روانه لری",
+    "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی ، الله ج دې ترقیامته پورې دا پور نوره روانه بېړی. روانه لری",
     "islamicSciencesBranch": "د اسلامي علومو څانګه"
   }
 }
