some things add by Anzoor

--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -34,7 +34,7 @@
   "about": {
     "title": "د انوارالعلوم په اړه",
     "subtitle": "د اسلامي تعلیماتو مرکز",
-    "description": "د انوارالعلوم مدرسهد ۶۳ کالو راهیسې د اسلامي تعلیم، روحاني تربیې او نبوي اخلاقو د خپرولو په خدمت بوخته ده، او زرګونه شاګردان یې په علم او تقویٰ سمبال کړي دي.",
+    "description": "د انوارالعلوم مدرسه د ۶۳ کالو راهیسې د اسلامي تعلیم، روحاني تربیې او نبوي اخلاقو د خپرولو په خدمت بوخته ده، او زرګونه شاګردان یې په علم او تقویٰ سمبال کړي دي.",
     "founderTitle": "شیخ القران والحدیث أنوار المشائخ",
     "founderName": "الحاج خلیفه صاحب فضل الدین (رح) مشهور (په ارغندي خلیفه صاحب) قدس الله سره",
     "founderDescription": "د اسلامي تعلیماتو او روحاني رشد مرکز چې د ۱۹۶۳ کال راهیسې د افغانستان په مختلفو سیمو کې د علم او معرفت د پړاوونو خدمت کوي",
@@ -188,7 +188,7 @@
       "gallerySection": {
         "title": "مدرسه",
         "collection": "ګالري",
-        "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا کشف وکړئ، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
+        "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا پیدا کړي، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
         "unavailable": "ګالري اوس مهال شتون نلري. مهرباني وکړئ وروسته بیا وګورئ.",
         "noImagesAvailable": "هیڅ انځور شتون نلري",
         "untitled": "بې نومه",
@@ -216,9 +216,9 @@
     "copyright": "مدرسه. ټول حقونه ساتل شوي.",
     "privacyPolicy": "د محرمیت پالیسي",
     "termsOfService": "د خدمت شرطونه",
-    "address": "پښتون زرغون، هرات، افغانستان",
-    "phone": "+93 700 000 000",
-    "email": "info@madrasa.com"
+    "address": "ارغندی، پغمان، کابل افغانیستان",
+    "phone": "+93 772046406",
+    "email": "anwarululoom@gmail.com"
   },
   "iftah": {
     "title": "د فتوا څانګه",
@@ -228,7 +228,7 @@
     "form": {
       "islamicQA": "اسلامي پوښتنې او ځوابونه",
       "seekDivineGuidance": "د الهي لارښوونې لټون",
-      "getAuthenticAnswers": "د قرآن او سنت پر بنسټ د وړ علماءو څخه اصلي اسلامي ځوابونه ترلاسه کړئ.",
+      "getAuthenticAnswers": "د قرآن، سنت او حنیفی فقهی پر بنسټ د وړ علماءو څخه اصلي اسلامي ځوابونه ترلاسه کړئ.",
       "expertScholars": "د پوهې علماء",
       "quickResponse": "ګړندۍ ځواب",
       "freeService": "وړیا خدمت",
@@ -288,7 +288,7 @@
     "immersiveLearning": "زموږ د علماءو لخوا تیار شوی د زده کړې ژور سفر.",
     "selfPaced": "د ځان سرعت",
     "flexibleLearning": "د زده کړې انعطاف",
-    "lessons": "دروس",
+    "lessons": "درس",
     "viewCourse": "د کورس لیدل",
     "recentlyUpdated": "وروسته تازه شوی",
     "instructorFallback": "حق مدرسه",
@@ -326,7 +326,7 @@
     "exploreKnowledge": "د پوهې څیړنه",
     "popularCourses": "مشهور کورسونه",
     "popularCoursesHighlight": "مشهور کورسونه",
-    "coursesDescription": "زموږ مشهور کورسونو پیدا کړئ، چې د اصلي اسلامي پوهې لپاره ډیزاین شوي دي چې په",
+    "coursesDescription": "الحمدالله! زموږ له مدرسی څخه لاندې کورسونه تر لاسه کولای شی: ناظره، حفظ، تجوید، تفسیر، احادیث، سیرت، اخلاق، فقه، اصول الفقه، میراث، معاني، ادب، تاریخ، نحو، صرف، منطق، عربي، حکمت، اساسات، انګلیسي او ریاضي.",
     "quran": "قرآن",
     "and": "او",
     "sunnah": "سنت",
@@ -354,9 +354,7 @@
     "readOurBlog": "زموږ بلاګ ولولئ",
     "exploreOurBlog": "بلاګ",
     "blogHighlight": "بلاګ",
-
-    
-    "blogDescription": "د زموږ د زده کړیالو څخه تازه مقالې، پوهه او کیسې کشف کړئ",
+    "blogDescription": "د زموږ د زده کړیالو څخه تازه مقالې، پوهه او کیسې پیدا کړئ",
     "loadingBlogPosts": "د بلاګ پوسټونو پورته کول...",
     "viewAllBlogs": "ټول بلاګونه وګورئ",
     "supportOurMission": "زموږ ماموریت ملاتړ وکړئ",
