--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -23,7 +23,7 @@
   },
  "hero": {
   "tagline": "✦  شریعت • طریقت • سیاست ✦",
-  "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَةٌ خلیفه صاحب ارغندی (رح)",
+  "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَة خلیفه صاحب ارغندی (رح)",
   "subtitle": "د نوي نسلونو روزنه په اسلامي نظریه او روحیه",
   "description": "اسلامي امت د شریعت، طریقت او سیاست په رڼا کې تربیه کړئ. زموږ په علمي ډګر کې هڅې د اسلامي علومو، ارزښتونو او د نبوي اخلاقو پر بنسټ ولاړې دي، څو هر ځوان مو په نبوي تګلاره ځان برابر کړي. دا الهامي چاپیریال زده کوونکو ته د علم، معنویت او اسلامي فکر درې واړه دروازې پرانیزي او هغوی ځواکمنوي چې نه یوازې د ځان، بلکې د اسلامي نړۍ، ټولنې او هیواد د روښانه راتلونکي لپاره ګټور ثابت شي.",
   "viewCourses": "کورسونه وګورئ",
@@ -53,15 +53,15 @@
     "values": {
       "title": "زموږ",
       "subtitle": "ارزښتونه",
-      "description": "دا اصول زموږ د اسلامي تعلیماتو چلند لارښووني کوي",
+      "description": "زموږ تعلیمي تګلاره پر هغو اصولو ولاړه ده چې د قرآن، سنت، اواسلافو له تګلارو نه اخیستل شوي، او د زده‌کوونکو دیني، اخلاقي او فکري جوړښت پیاوړی کوي",
       "authenticKnowledge": "اصلي علم",
-      "authenticKnowledgeDesc": "د قرآن او سنت پر بنسټ، د پاکو اسلامي تعلیماتو ضمانت.",
-      "excellence": "برترۍ",
-      "excellenceDesc": "د اسلامي علم او اخلاقي ودې د لوړو معیارونو ساتنه.",
+      "authenticKnowledgeDesc": "دشریعت داصولو سره سم چې نه افراط وی نه تفریط، علم حاصلول او خپرول زموږ اساسي هدف دی.  ",
+      "excellence": "اتباع سنت",
+      "excellenceDesc": "د رسول الله ﷺ د سنتو پیروي زموږ د ژوند لارښود ده.  ",
       "faithAndCharacter": "ایمان او څیرې",
       "faithAndCharacterDesc": "د اسلامي ارزښتونو، د درناوي او صمیمیت روزنه.",
       "community": "ټولنه",
-      "communityDesc": "د مسلمانانو ټولنو ته د وقف او پاملرنې سره خدمت."
+      "communityDesc": "ټولنې ته دیني، اخلاقي او تعلیمي خدمت زموږ مسؤلیت  دی."
     },
     "subjects": {
       "tajweed": "تجوید",
@@ -327,9 +327,7 @@
     "popularCourses": "مشهور کورسونه",
     "popularCoursesHighlight": "مشهور کورسونه",
     "coursesDescription": "الحمدالله! زموږ له مدرسی څخه لاندې کورسونه تر لاسه کولای شی: ناظره، حفظ، تجوید، تفسیر، احادیث، سیرت، اخلاق، فقه، اصول الفقه، میراث، معاني، ادب، تاریخ، نحو، صرف، منطق، عربي، حکمت، اساسات، انګلیسي او ریاضي.",
-    "quran": "قرآن",
-    "and": "او",
-    "sunnah": "سنت",
+ 
     "loadingCourses": "د کورسونو پورته کول...",
     "viewAllCourses": "ټول کورسونه وګورئ",
     "loadingEvents": "د پیښو پورته کول...",
@@ -375,9 +373,9 @@
     "readMore": "نور ولولئ"
   },
   "donation": {
-    "chooseMethod": "د خپل عطیه د لارې غوره کړئ",
+    "chooseMethod": "د خپلو مرستو لارې غوره کړئ",
     "chooseMethodDesc": "موږ د خپل موخې لپاره د مرستې کولو لپاره څو امن او اسانه لارې وړاندې کوو",
-    "loadingInfo": "د عطیه معلومات پورته کول...",
+    "loadingInfo": "د د مرستی معلومات پورته کول...",
     "whatsapp": "واټساپ",
     "email": "بریښنالیک",
     "location": "ځای",
@@ -393,7 +391,24 @@
     "step3Desc": "د خپل عطیه تاییدولو او تازه معلوماتو ترلاسه کولو لپاره موږ ته پیغام واستوئ",
     "secure": "۱۰۰٪ امن",
     "verified": "تصدیق شوي سازمانونه",
-    "support": "۲۴/۷ ملاتړ"
+    "support": "۲۴/۷ ملاتړ",
+    "instructionTitle": "د مرستو کولو لارښود",
+    "howToDonateTitle": "څنګه مرسته وکړئ",
+    "howToDonateDescription": "ستاسو د مرستې لپاره ډیرونه اسانه لارې شته دي. د لاندې لارښوونو تعقیب وکړئ",
+    "contactStep": "د اړیکو خبرې وکړئ",
+    "contactStepDesc": "د WhatsApp یا بریښنالیک له لارې د مرستې د اړیکې سره اړیکه ونیسئ",
+    "donateStep": "مرسته واستوئ",
+    "donateStepDesc": "ستاسو د مرستې سیمه او اندازه ټاکئ او داسې تصدیق کړئ",
+    "confirmationStep": "د مرستې تصدیق",
+    "confirmationStepDesc": "ستاسو ته به د مرستې د ترلاسه کولو تصدیق رسول شي",
+    "trustTitle": "ولې زموږ پر باور وکړئ؟",
+    "trustDescription": "موږ د شفافیت، امنیت او د مرستوکوونکو لپاره دوامداره ملاتړ ګارنګو خپلولو ته ژمن یو",
+    "secureTitle": "۱۰۰٪ امن دی",
+    "secureDescription": "ستاسو مرستې د لوړو امنیت معیارونو او تایید شوي حفاظت سره پروسس کیږي",
+    "verifiedTitle": "تصدیق شوي سازمانونه",
+    "verifiedDescription": "زموږ سازمان رسمي تصدیق شوی دی او د باور وړ چارواکو لخوا منظمه معاینه کیږي",
+    "supportTitle": "۲۴/۷ ملاتړ",
+    "supportDescription": "موږ د ټولو پوښتنو او د مرستې اړتیاوو لپاره د ورځې او شپې ملاتړ وړاندې کوو"
   },
   "eventsPage": {
     "home": "کور",
@@ -414,7 +429,7 @@
   "events": {
     "discoverOur": "زموږ وپلټئ",
     "events": "واقعه",
-    "description": "زموږ د ژوندي ټولنې غونډو، لیکچرونو او ځانګړو تجربو سره یوځای شئ.",
+    "description": "زموږ د  اسلامي ټولنې د غونډو، دیني لیکچرونو، علمي ناستو او ځانګړو تجربو برخه کې ګډون وکړئ، تر څو د علم، دعوت او خیر خپرولو په لاره کې ګډ ګامونه واخلو.",
     "communityEvent": "د ټولنې پیښه",
     "locationComingSoon": "ځای ژر راځي",
     "flexible": "انعطاف منونکي",
@@ -472,7 +487,7 @@
       "subtitle": "د هر ډول پوښتنو یا ملاتړ لپاره زموږ سره اړیکه ونیسئ"
     },
     "donation": {
-      "title": "زموږ ماموریت ملاتړ وکړئ",
+      "title": "زموږ د خدمتونو ملاتړ وکړئ",
       "subtitle": "د اسلامي پوهې او تعلیماتو د پراخولو په برخه کې زموږ سره مرسته وکړئ"
     },
     "registration": {
@@ -487,6 +502,10 @@
   "title": "دار الافتاح",
   "subtitle": "په دارالافتاح کې خپلې دیني پوښتنې وکړئ او د شرعي لارښوونو رڼا تر لاسه کړئ"
 },
+    "sanad": {
+      "title": "زموږ سند (د انتقال تسلسل)",
+      "subtitle": "زموږ د روحاني نسب او انتقال تسلسل وپلټئ. موږ ته ویاړ دی چې دا درسونه خوندي او دوام ورکوو."
+    },
     "default": {
       "title": "اسلامي تعلیمات",
       "subtitle": "زموږ د پراخه اسلامي زده کړې پلیټفارم ته ښه راغلاست"
@@ -696,5 +715,9 @@
     "reestablishmentDate2": "۱ / ۵ / ١٣٨۴ هـ ش",
     "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی ، الله ج دې ترقیامته پورې دا پور نوره روانه بېړی. روانه لری",
     "islamicSciencesBranch": "د اسلامي علومو څانګه"
+  },
+  "sanad": {
+    "title": "زموږ سند (د انتقال تسلسل)",
+    "description": "زموږ د روحاني نسب او انتقال تسلسل وپلټئ. موږ ته ویاړ دی چې دا درسونه خوندي او دوام ورکوو."
   }
 }
