--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -8,9 +8,9 @@
     "awlyaacharts": "اولیاء چارټ",
     "books": "کتابتون",
     "donation": "مرسته",
-    "blogs": "بلاګونه",
+    "blogs": "څرک",
     "author": "لیکوال",
-    "event": "واقیعات",
+    "event": "علمی مجالس",
     "tasawwuf": "تصوف",
     "graduation": "فراغت",
     "sanad": "شجره",
@@ -25,7 +25,7 @@
   "tagline": "✦  شریعت • طریقت • سیاست ✦",
   "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَة خلیفه صاحب ارغندی (رح)",
   "subtitle": "د نوي نسلونو روزنه په اسلامي نظریه او روحیه",
-  "description": "اسلامي امت د شریعت، طریقت او سیاست په رڼا کې تربیه کړئ. زموږ په علمي ډګر کې هڅې د اسلامي علومو، ارزښتونو او د نبوي اخلاقو پر بنسټ ولاړې دي، څو هر ځوان مو په نبوي تګلاره ځان برابر کړي. دا الهامي چاپیریال زده کوونکو ته د علم، معنویت او اسلامي فکر درې واړه دروازې پرانیزي او هغوی ځواکمنوي چې نه یوازې د ځان، بلکې د اسلامي نړۍ، ټولنې او هیواد د روښانه راتلونکي لپاره ګټور ثابت شي.",
+  "description": ".اسلامي امت د شریعت، طریقت او سیاست په رڼا کې تربیه کړئ. زموږ په علمي ډګر کې هڅې د اسلامي علومو، ارزښتونو او د نبوي اخلاقو پر بنسټ ولاړې دي، څو هر ځوان مو په نبوي تګلاره ځان برابر کړي. دا الهامي چاپیریال زده کوونکو ته د علم، معنویت او اسلامي فکر درې واړه دروازې پرانیزي او هغوی ځواکمنوي چې نه یوازې د ځان، بلکې د اسلامي نړۍ، ټولنې او هیواد د روښانه راتلونکي لپاره ګټور ثابت شي",
   "viewCourses": "کورسونه وګورئ",
   "aboutUs": "زموږ په اړه",
   "ourCourses": "زموږ کورسونه"
@@ -33,7 +33,7 @@
 
   "about": {
     "title": "د انوارالعلوم په اړه",
-    "subtitle": "د اسلامي تعلیماتو مرکز",
+    "subtitle": "د اسلامي زده کړو مرکز",
     "description": "د انوارالعلوم مدرسه د ۶۳ کالو راهیسې د اسلامي تعلیم، روحاني تربیې او نبوي اخلاقو د خپرولو په خدمت بوخته ده، او زرګونه شاګردان یې په علم او تقویٰ سمبال کړي دي.",
     "founderTitle": "شیخ القران والحدیث أنوار المشائخ",
     "founderName": "الحاج خلیفه صاحب فضل الدین (رح) مشهور (په ارغندي خلیفه صاحب) قدس الله سره",
@@ -41,8 +41,8 @@
     "stats": {
       "title": "زموږ د خدمتونو احصائیه",
       "description": "د ۶۳ کلونو د خدمت په ترڅ کې د زموږ د بریاوو لنډه احصائیه",
-      "years": " د خدمت کلونه",
-      "graduates": "فاریغان",
+      "years": "  خدمتی دوره",
+      "graduates": "فارغان",
       "students": "د کال شاګردان",
       "scholars": "علماء",
       "since1963": "د ۱۹۶۳ راهیسې",
@@ -52,16 +52,16 @@
     },
     "values": {
       "title": "زموږ",
-      "subtitle": "ارزښتونه",
-      "description": "زموږ تعلیمي تګلاره پر هغو اصولو ولاړه ده چې د قرآن، سنت، اواسلافو له تګلارو نه اخیستل شوي، او د زده‌کوونکو دیني، اخلاقي او فکري جوړښت پیاوړی کوي",
-      "authenticKnowledge": "اصلي علم",
+      "subtitle": "اهداف",
+      "description": ".زموږ تعلیمي تګلاره پر هغو اصولو ولاړه ده چې د قرآن، سنت، اواسلافو له تګلارو نه اخیستل شوي، او د زده‌کوونکو دیني، اخلاقي او فکري جوړښت پیاوړی کوي",
+      "authenticKnowledge": " علم",
       "authenticKnowledgeDesc": "دشریعت داصولو سره سم چې نه افراط وی نه تفریط، علم حاصلول او خپرول زموږ اساسي هدف دی.  ",
       "excellence": "اتباع سنت",
       "excellenceDesc": "د رسول الله ﷺ د سنتو پیروي زموږ د ژوند لارښود ده.  ",
-      "faithAndCharacter": "ایمان او څیرې",
-      "faithAndCharacterDesc": "د اسلامي ارزښتونو، د درناوي او صمیمیت روزنه.",
+      "faithAndCharacter": "ایمان او څهره",
+      "faithAndCharacterDesc": "ایمان رڼا ده، او دمؤمن څهره باید د ایمان عکاسي وکړي ظاهري حالت مو د باطني صداقت، تقویٰ او دیني ارزښتونو ترجمان وي ",
       "community": "ټولنه",
-      "communityDesc": "ټولنې ته دیني، اخلاقي او تعلیمي خدمت زموږ مسؤلیت  دی."
+      "communityDesc": ".ټولنې ته دیني، اخلاقي او تعلیمي خدمت زموږ مسؤلیت  دی."
     },
     "subjects": {
       "tajweed": "تجوید",
@@ -92,14 +92,14 @@
       "2024": "د میراث دوام",
       "2024Desc": "د اسلامي تعلیماتو او روحاني لارښوونو کې دوامداره خدمت"
     },
-    "teachers": "د جامعې مشایخ او استادان",
+    "teachers": "د جامعې مشائخ او استادان",
     "teachersDesc": "د لوړو علمي درجو څښتنان",
     "academicServices": "د جامعې علمي خدمتونه",
     "academicServicesDesc": "د اسلامي او عصري علومو د تدریس مرکز",
     "callToAction": {
       "title": "زموږ ټولنې سره یوځای شئ",
       "description": "زموږ د اسلامي تعلیماتو او روحاني ودې د میراث برخه شئ.",
-      "viewCourses": "کورسونو ته وګورئ",
+      "viewCourses": "کورسونه وګورئ",
       "contactUs": "اړیکه ونیسئ"
     },
     "biography": {
@@ -188,7 +188,7 @@
       "gallerySection": {
         "title": "مدرسه",
         "collection": "ګالري",
-        "description": "زموږ د مدرسې د بیاځلي علم او روحاني تعلیماتو د ښکلا پیدا کړي، چې د ذهنونو او زړونو روزنې ته وقف دي ترڅو د رښتیني او روښانه راتلونکي جوړولو لپاره.",
+        "description": "زموږ د عکسونو ګالري کې د مدرسې د مهمو پېښو، زده‌کوونکو او تعلیمي فعالیتونو ښکلي انځورونه ښودل کېږي",
         "unavailable": "ګالري اوس مهال شتون نلري. مهرباني وکړئ وروسته بیا وګورئ.",
         "noImagesAvailable": "هیڅ انځور شتون نلري",
         "untitled": "بې نومه",
@@ -291,16 +291,16 @@
     "lessons": "درس",
     "viewCourse": "د کورس لیدل",
     "recentlyUpdated": "وروسته تازه شوی",
-    "instructorFallback": "حق مدرسه",
+    "instructorFallback": " انوارالمشائخ خپرندویه اداره",
     "courseNotFound": "کورسو نه موندل شو",
     "courseNotFoundMessage": "د کورس چې تاسو یې لټوئ شتون نلري.",
     "browseAllCourses": "ټول کورسونه وګورئ",
     "home": "کور پاڼه",
-    "coursePreview": "د کورس مخکتنه",
-    "watchAndLearn": "وګورئ او زده کړئ",
-    "previewDescription": "د دې جامع کورس څخه د هغه څه مخکتنه ترلاسه کړئ چې تاسو به یې زده کړئ",
+    "coursePreview": "د کورس لنډه پېژندنه ",
+    "watchAndLearn": "وګورئ او زده کړه وکړئ",
+    "previewDescription": "زموږ درسي ویدیوګانې وګورئ، زده کړه وکړئ، او له اسلامي علومو سره ژوره اړیکه ټینګه کړئ",
     "getCourseInfo": "د کورس معلومات ترلاسه کړئ",
-    "enrollmentMessage": "د نوملیکنې تفصیلاتو لپاره موږ سره اړیکه ونیسئ",
+    "enrollmentMessage": "د نوملیکنې تفصیلاتو لپاره موږ  سره اړیکه ونیسئ",
     "enrollNow": "اوس نوملیکنه وکړئ",
     "aboutThisCourse": "د دې کورس په اړه",
     "defaultDescription": "دا کورس د اسلامي تعلیماتو کې جامع پوهه او عملي مهارتونه وړاندې کوي. د منظم زده کړې له لارې ستاسو د پوهې ژورولو او د عقیدې پیاوړتیا لپاره ډیزاین شوی.",
@@ -323,7 +323,7 @@
     "ultraHd": "4K"
   },
   "home": {
-    "exploreKnowledge": "د پوهې څیړنه",
+    "exploreKnowledge": "درسي مضامین",
     "popularCourses": "مشهور کورسونه",
     "popularCoursesHighlight": "مشهور کورسونه",
     "coursesDescription": "الحمدالله! زموږ له مدرسی څخه لاندې کورسونه تر لاسه کولای شی: ناظره، حفظ، تجوید، تفسیر، احادیث، سیرت، اخلاق، فقه، اصول الفقه، میراث، معاني، ادب، تاریخ، نحو، صرف، منطق، عربي، حکمت، اساسات، انګلیسي او ریاضي.",
@@ -333,38 +333,38 @@
     "loadingEvents": "د پیښو پورته کول...",
     "ourBooks": "کتابونه",
     "booksHighlight": "کتابونه",
-    "booksDescription": "په",
-    "booksDescriptionEnd": "بنسټ لرونکي، زموږ کتابونه اصلي اسلامي پوهه وړاندې کوي.",
+    "booksDescription": "",
+    "booksDescriptionEnd": "زموږ کتابونه د قرآن، سنت، اسلافو، او حنفي فقهې پر بنسټ، مستند او ژور اسلامي علوم وړاندې کوي، څوجامعی ته محققین علماء وړاندې کړی او د باور وړ ښوونکی وي",
     "loadingBooks": "د کتابونو پورته کول...",
     "viewAllBooks": "ټول کتابونه وګورئ",
     "loadingGallery": "د ګالري پورته کول...",
-    "celebratingSuccess": "د بریالیتوب لمانځه",
-    "ourGraduates": "فاریغان",
-    "graduatesHighlight": "فاریغان",
-    "graduatesDescription": "د هغو زده کړیالو د بریالیتوبونو او سفرونو روښانه کول چې په بریالیتوب سره خپل کورسونه بشپړ کړي",
-    "loadingGraduates": "د فاریغانو پورته کول...",
+    "celebratingSuccess": "  دستار فضلیت",
+    "ourGraduates": "د جامعی فارغین",
+    "graduatesHighlight": " د جامعی فارغین",
+    "graduatesDescription": "زموږ فارغین د علم، تقوی او دعوت استازي دي، چې له دستار فضیلت سره امت ته نوې رڼا رسوي.",
+    "loadingGraduates": "د فارغانو پورته کول...",
     "viewAllGraduation": "ټول فراغتونه وګورئ",
     "ourShajara": "زموږ شجره",
     "shajaraHighlight": "شجره",
     "shajaraDescription": "زموږ د روحاني نسب او د مبارک دودیزو سلسلو موندنه",
     "loadingShajara": "د شجری پورته کول...",
     "viewAllShajara": "ټول شجره وګورئ",
-    "readOurBlog": "زموږ بلاګ ولولئ",
-    "exploreOurBlog": "بلاګ",
-    "blogHighlight": "بلاګ",
-    "blogDescription": "د زموږ د زده کړیالو څخه تازه مقالې، پوهه او کیسې پیدا کړئ",
+    "readOurBlog": "تازه خبرونه او پیښې",
+    "exploreOurBlog": "د علم څرک",
+    "blogHighlight": "د علم څرک",
+    "blogDescription": "په دې برخه کې د اسلامي لارښوونو، داسلافو افکارو او معاصرو اړتیاوو پر بنسټ د فکر، بصیرت او تجربې ارزښتناکې خپرونې وړاندې کېږي، څو ذهنونه راويښ او زړونه روښانه شی",
     "loadingBlogPosts": "د بلاګ پوسټونو پورته کول...",
-    "viewAllBlogs": "ټول بلاګونه وګورئ",
-    "supportOurMission": "زموږ ماموریت ملاتړ وکړئ",
-    "helpUsContinue": "زموږ د کار دوام کې مرسته وکړئ",
-    "donationDescription": "ستاسو سخاوتمانه ملاتړ زموږ د راتلونکي نسلونو لپاره اصلي اسلامي تعلیمات وړاندې کولو او د زموږ د ښکلي کیمپس ساتلو کې مرسته کوي",
-    "monthlySupport": "د میاشتې ملاتړ",
-    "helpStudentMonthly": "د میاشتې د زده کړیال سره مرسته وکړئ",
-    "quarterlyDonation": "د فصل عطیه",
-    "supportPrograms": "زموږ پروګرامونو ملاتړ وکړئ",
-    "annualContribution": "د کال ونډه",
-    "transformLivesYearly": "د کال ژوندونه بدل کړئ",
-    "donateNow": "اوس خپله مرسته ورکړئ",
+    "viewAllBlogs": "ټولی خپرونی وګورئ",
+    "supportOurMission": "زموږ ملاتړ وکړئ",
+    "helpUsContinue": " مرسته وکړئ چې خپل کارونه په دوامداره توګه پرمخ یوسو (بعون الله) ",
+    "donationDescription": "ستاسې مرسته زموږ د علمي،روحانی، سیاسی،  او اصلاحی خدمتونو د دوام ضمانت دی بعون الله",
+    "monthlySupport": "زکات",
+    "helpStudentMonthly": "د مال پاکوالی او د ټولنې دخدمت وسیله ده.",
+    "quarterlyDonation": "عُشر",
+    "supportPrograms": "د حاصل څخه د ورکړې یوه برخه ده چې د شکر او شرافت نښه ګڼل کېږي.",
+    "annualContribution": "صدقات",
+    "transformLivesYearly": "د زړه پاکولو او د بېوزلو سره د مرستې کولو لار ده، چې د اخلاص، شفقت، او مرحمت څرګندونه کوي.",
+    "donateNow": " خپلی مرستی زموږ سره جاری وساتی",
     "allArticles": "ټول مقالې",
     "readArticle": "مقاله ولولئ",
     "minRead": "دقیقې لوستل",
@@ -374,7 +374,7 @@
   },
   "donation": {
     "chooseMethod": "د خپلو مرستو لارې غوره کړئ",
-    "chooseMethodDesc": "موږ د خپل موخې لپاره د مرستې کولو لپاره څو امن او اسانه لارې وړاندې کوو",
+    "chooseMethodDesc": "ستاسو د مرستې کولو لپاره څو امن او اسانه لارې وړاندې کوو",
     "loadingInfo": "د د مرستی معلومات پورته کول...",
     "whatsapp": "واټساپ",
     "email": "بریښنالیک",
@@ -394,13 +394,12 @@
     "support": "۲۴/۷ ملاتړ",
     "instructionTitle": "د مرستو کولو لارښود",
     "howToDonateTitle": "څنګه مرسته وکړئ",
-    "howToDonateDescription": "ستاسو د مرستې لپاره ډیرونه اسانه لارې شته دي. د لاندې لارښوونو تعقیب وکړئ",
-    "contactStep": "د اړیکو خبرې وکړئ",
-    "contactStepDesc": "د WhatsApp یا بریښنالیک له لارې د مرستې د اړیکې سره اړیکه ونیسئ",
+    "howToDonateDescription": "ستاسو د مرستې لپاره ډیری اسانی لارې شته - لاندې لارښوونو تعقیب وکړئ",
+    "contactStep": "اړیکه",
+    "contactStepDesc": "د WhatsApp یا بریښنالیک له لارې د مرستې لپاره اړیکه ونیسئ",
     "donateStep": "مرسته واستوئ",
-    "donateStepDesc": "ستاسو د مرستې سیمه او اندازه ټاکئ او داسې تصدیق کړئ",
-    "confirmationStep": "د مرستې تصدیق",
-    "confirmationStepDesc": "ستاسو ته به د مرستې د ترلاسه کولو تصدیق رسول شي",
+    "donateStepDesc": " خپلی مرسیتی د بانکی اکاونټونو له لاری موږ ته واستوئ",
+    "confirmationStepDesc": "د خپلو مرستو د رسیدلو تصدیق تر لاسه کړئ",
     "trustTitle": "ولې زموږ پر باور وکړئ؟",
     "trustDescription": "موږ د شفافیت، امنیت او د مرستوکوونکو لپاره دوامداره ملاتړ ګارنګو خپلولو ته ژمن یو",
     "secureTitle": "۱۰۰٪ امن دی",
@@ -428,55 +427,55 @@
   },
   "events": {
     "discoverOur": "زموږ وپلټئ",
-    "events": "واقعه",
-    "description": "زموږ د  اسلامي ټولنې د غونډو، دیني لیکچرونو، علمي ناستو او ځانګړو تجربو برخه کې ګډون وکړئ، تر څو د علم، دعوت او خیر خپرولو په لاره کې ګډ ګامونه واخلو.",
-    "communityEvent": "د ټولنې پیښه",
-    "locationComingSoon": "ځای ژر راځي",
+    "events": "علمی مجالس",
+    "description": "زموږ د  اسلامي ټولنې د غونډو، علمي ناستو، روحانی مجالسو او ځانګړو تجربو برخه کې ګډون وکړئ، تر څو د علم، دعوت او خیر خپرولو په لاره کې ګډ ګامونه واخلو.",
+    "communityEvent": "علمی، روحانی او تحقیقی بیان ",
+    "locationComingSoon": "ژر به وړاندې شي",
     "flexible": "انعطاف منونکي",
-    "facebookLive": "فیسبوک ژوندي",
-    "youtubeLive": "یوټیوب ژوندي",
+    "facebookLive": " فیسبوک ژوندی بڼه",
+    "youtubeLive": "یوټوب ژوندی بڼه",
     "zoomMeeting": "زوم غونډه",
-    "joinLive": "ژوندي کې ګډون وکړئ",
-    "organizedBy": "د انوارالعلوم مدرسې لخوا تنظیم شوی",
+    "joinLive": "ژوندي بڼه کې ګډون وکړئ",
+    "organizedBy": "د انوارالمشائخ خپرندوی اداری لخوا تنظیم شوی",
     "eventDetails": "د وقیعاتو جزئیات",
     "viewAllEvents": "ټولې واقیعات وګورئ"
   },
   "header": {
     "courses": {
       "title": "اسلامي کورسونه",
-      "subtitle": "زموږ د اسلامي تعلیماتو پراخه پروګرامونه او کورسونه وپلټئ"
+      "subtitle": "زموږ د اسلامي تعلیماتو پراخ پروګرامونه او کورسونه وپلټئ"
     },
     "articles": {
       "title": "اسلامي مقالې",
-      "subtitle": "د اسلامي تعلیماتو او معاصر مسایلو په اړه بصیرت لرونکي مقالې ولولئ"
+      "subtitle": "د اسلامي تعلیماتو او معاصرو مسایلو په اړه بصیرت لرونکي مقالې ولولئ"
     },
     "blogs": {
-      "title": "اسلامي بلاګونه",
-      "subtitle": "زموږ د وروستي اسلامي بلاګ پوسټونو او بصیرتونو سره تازه پاتې شئ"
+      "title": "اسلامي خپرونی",
+      "subtitle": "په دې برخه کې د اسلامي لارښوونو، داسلافو افکارو او معاصرو اړتیاوو پر بنسټ د فکر، بصیرت او تجربې ارزښتناکې خپرونې وړاندې کېږي، څو ذهنونه راويښ او زړونه روښانه شی"
     },
     "events": {
-      "title": "اسلامي پیښې",
-      "subtitle": "زموږ د راتلونکو اسلامي پیښو، سیمینارونو او غونډو کې ګډون وکړئ"
+      "title": "علمی مجالس ",
+      "subtitle": "زموږ د اسلامي ټولنې د غونډو، علمي ناستو، روحانی مجالسو او ځانګړو تجربو برخه کې ګډون وکړئ، تر څو د علم، دعوت او خیر خپرولو په لاره کې ګډ ګامونه واخلو."
     },
     "books": {
       "title": "اسلامي کتابونه",
-      "subtitle": "زموږ د اسلامي کتابونو او ادبیاتو ټولګه ومومئ"
+      "subtitle": "زموږ کتابونه د قرآن، سنت، اسلافو، او حنفي فقهې پر بنسټ، مستند او ژور اسلامي علوم وړاندې کوي، څوجامعی ته محققین علماء وړاندې کړی او د باور وړ ښوونکی وي"
     },
     "authors": {
-      "title": "اسلامي لیکوالان",
-      "subtitle": "زموږ د درناوي وړ اسلامي علماوو او لیکوالانو سره ووینئ"
+      "title": " لیکوالان",
+      "subtitle": "زموږ لیکوالان د اسلامي علومو ژور پوهان دي چې په خپل علم، تحقیق او بیان سره د دین خدمت کوي او د حقیقت رڼا خپروي."
     },
     "awlayaa": {
       "title": "اولیاء الله",
-      "subtitle": "د الله د دوستانو د ژوند او تعلیماتو په اړه زده کړئ"
+      "subtitle": "د الله د دوستانو د ژوند، علمیت، روحانیت اوسیاسیت په اړه معلومات تر لاسه کړئ "
     },
     "tasawwuf": {
       "title": "تصوف",
-      "subtitle": "د اسلامي عمل د روحاني ابعادو په رڼا کې وپلټئ"
+      "subtitle": "تصوف د اسلام هغه ژوره روحاني برخه ده چې ظاهر له باطن سره تړي، شریعت ته وفادار، او انسان ته د الله سره د مینې، خشیت، او قرب لاره ښيي"
     },
     "gallery": {
       "title": "ګالري",
-      "subtitle": "زموږ د اسلامي پیښو او فعالیتونو عکسونه وګورئ"
+      "subtitle": "زموږ د عکسونو ګالري کې د مدرسې د مهمو پېښو، زده‌کوونکو او تعلیمي فعالیتونو ښکلي انځورونه ښودل کېږي"
     },
    "about": {
   "title": "زموږ په اړه",
@@ -496,15 +495,15 @@
     },
     "graduatedStudents": {
       "title": "فارغان",
-      "subtitle": "زموږ د بریالي فارغانو او د دوی د لاسته راوړنو جشن"
+      "subtitle": "زموږ فارغین د علم، تقوی او دعوت استازي دي، چې له دستار فضیلت سره امت ته نوې رڼا رسوي. 🌟"
     },
    "iftah": {
   "title": "دار الافتاح",
   "subtitle": "په دارالافتاح کې خپلې دیني پوښتنې وکړئ او د شرعي لارښوونو رڼا تر لاسه کړئ"
 },
     "sanad": {
-      "title": "زموږ سند (د انتقال تسلسل)",
-      "subtitle": "زموږ د روحاني نسب او انتقال تسلسل وپلټئ. موږ ته ویاړ دی چې دا درسونه خوندي او دوام ورکوو."
+      "title": "شجره نقشبندیه",
+      "subtitle": "د اولیاؤ او عارفانو روحاني سلسله"
     },
     "default": {
       "title": "اسلامي تعلیمات",
@@ -539,7 +538,7 @@
     "date": "نیټه",
     "time": "وخت",
     "graduationYear": "د فارغ زده کوونکی کال",
-    "esteemedGraduates": "زموږ درناوي وړ فارغ‌التحصیلان",
+    "esteemedGraduates": "دعلمي، روحاني او اخلاقي روزنې روښانه څهرې",
     "father": "پلار",
     "grandfather": "نیکه",
     "noStudents": "د دې فارغ زده کوونکی لپاره هیڅ زده کړیال نه دی لیست شوی",
@@ -716,8 +715,74 @@
     "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی ، الله ج دې ترقیامته پورې دا پور نوره روانه بېړی. روانه لری",
     "islamicSciencesBranch": "د اسلامي علومو څانګه"
   },
+  "awlayaa": {
+    "findYourScholar": "اولیاء الله پیدا کړئ",
+    "findYourScholarDesc": "زموږ د مشهور روحانی او علمی اشخاص د نوم، تخصص او ځای له مخې پیدا کړئ",
+    "searchPlaceholder": "د نوم، تخصص او ځای له مخې لټون...",
+    "scholarsFound": "{count} عالم موندل شو",
+    "scholarFound": "{count} عالم موندل شو"
+  },
+  "awlyaaDetail": {
+    "distinguishedScholar": "نامتو عالم",
+    "teachers": "استادان",
+    "viewTeacherDetails": "د استاد جزئیات وګورئ",
+    "unknownTeacher": "نامعلوم استاد",
+    "noTeacherInfo": "د استاد معلومات شتون نلري",
+    "students": "شاګردان",
+    "viewStudentDetails": "د شاګرد جزئیات وګورئ",
+    "unknownStudent": "نامعلوم شاګرد",
+    "noStudentInfo": "د شاګرد معلومات شتون نلري",
+    "personalInformation": "شخصي معلومات",
+    "fathersName": "د پلار نوم",
+    "children": "اولاد",
+    "booksWritten": "لیکل شوي کتابونه",
+    "birthDetails": "د زیږیدو جزئیات",
+    "deathDetails": "د وفات جزئیات",
+    "education": "زده کړې",
+    "famousWorksContributions": "مشهور کارونه او مرسته",
+    "noFamousWorks": "مشهور کارونه شتون نلري",
+    "additionalInformation": "نور معلومات",
+    "notSpecified": "ښودل شوی نه دی",
+    "address": "پته",
+    "location": "ځای",
+    "birthPlace": "د زیږیدو ځای",
+    "deathPlace": "د وفات ځای"
+  },
   "sanad": {
-    "title": "زموږ سند (د انتقال تسلسل)",
-    "description": "زموږ د روحاني نسب او انتقال تسلسل وپلټئ. موږ ته ویاړ دی چې دا درسونه خوندي او دوام ورکوو."
+    "title": "شجره نقشبندیه",
+    "description": "د اولیاؤ او عارفانو روحاني سلسله"
+  },
+  "blog": {
+    "readMore": "نور ولولئ",
+    "all": "ټول",
+    "general": "عمومي",
+    "recentlyUpdated": "وروسته تازه شوی",
+    "noBlogsAvailable": "بلاګونه شتون نلري",
+    "checkBackSoon": "مهرباني وکړئ وروسته بیا وګورئ",
+    "noSummaryAvailable": "لنډیز شتون نلري"
+  },
+  "contact": {
+    "sendMessage": "پیغام واستوئ",
+    "respondSoon": "موږ به ژر ځواب ورکړو",
+    "yourName": "ستاسو نوم",
+    "yourEmail": "ستاسو بریښنالیک",
+    "yourPhone": "ستاسو تلیفون",
+    "yourMessage": "ستاسو پیغام",
+    "sendMessageButton": "پیغام واستوئ",
+    "getInTouch": "زموږ سره اړیکه ونیسئ",
+    "loveToHear": "موږ ستاسو څخه اوریدل غواړو",
+    "address": "پته",
+    "contact": "اړیکه",
+    "openingHours": "د کار وخت",
+    "sending": "لیږل کیږي...",
+    "messageSentSuccess": "ستاسو پیغام په بریالیتوب سره واستول شو",
+    "failedToSend": "د پیغام لیږلو کې ستونزه",
+    "fillRequiredFields": "مهرباني وکړئ ټول اړین ساحې بشپړې کړئ",
+    "validation": {
+      "pleaseEnterName": "مهرباني وکړئ خپل نوم ولیکئ",
+      "pleaseEnterEmail": "مهرباني وکړئ خپل بریښنالیک ولیکئ",
+      "validEmailAddress": "مهرباني وکړئ د بریښنالیک ښه پته ولیکئ",
+      "pleaseEnterMessage": "مهرباني وکړئ خپل پیغام ولیکئ"
+    }
   }
 }
