anzoor also add some things

--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -218,7 +218,8 @@
     "termsOfService": "د خدمت شرطونه",
     "address": "ارغندی، پغمان، کابل افغانیستان",
     "phone": "+93 772046406",
-    "email": "anwarululoom@gmail.com"
+    "email": "anwarululoom@gmail.com",
+    "followUs": "زموږ تعقیب وکړئ"
   },
   "iftah": {
     "title": "د فتوا څانګه",
