--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -219,7 +219,7 @@
     "privacyPolicy": "د محرمیت پالیسي",
     "termsOfService": "د خدمت شرطونه",
     "address": "ارغندی، پغمان، کابل افغانیستان",
-    "phone": "+93 772046406",
+    "phone": " 772046406 93+",
     "email": "anwarululoom@gmail.com",
     "followUs": "زموږ تعقیب وکړئ"
   },
