--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -27,7 +27,7 @@
   "tagline": "✦  شریعت • طریقت • سیاست ✦",
   "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَة خلیفه صاحب ارغندی (رح)",
   "subtitle": "د نوي نسلونو روزنه په اسلامي نظریه او روحیه",
-  "description": ".اسلامي امت د شریعت، طریقت او سیاست په رڼا کې تربیه کړئ. زموږ په علمي ډګر کې هڅې د اسلامي علومو، ارزښتونو او د نبوي اخلاقو پر بنسټ ولاړې دي، څو هر ځوان مو په نبوي تګلاره ځان برابر کړي. دا الهامي چاپیریال زده کوونکو ته د علم، معنویت او اسلامي فکر درې واړه دروازې پرانیزي او هغوی ځواکمنوي چې نه یوازې د ځان، بلکې د اسلامي نړۍ، ټولنې او هیواد د روښانه راتلونکي لپاره ګټور ثابت شي",
+  "description": "زموږ مدرسه د شریعت، طریقت او سیاست په رڼا کې د اسلامي روزنې الهامي مرکز دی. موږ زده‌کوونکي د علم، معنویت او نبوي اخلاقو پر بنسټ روزو، څو د اسلامي فکر او عمل رښتیني لارویان شي. هدف مو دا دی چې هر زده‌کوونکی د خپل ځان، ټولنې او امت د روښانه راتلونکي لپاره یو باایمانه او اغېزمن فرد جوړ شي. ",
   "viewCourses": "کورسونه وګورئ",
   "aboutUs": "زموږ په اړه",
   "ourCourses": "زموږ کورسونه"
@@ -509,7 +509,7 @@
       "subtitle": "زموږ فارغین د علم، تقوی او دعوت استازي دي، چې له دستار فضیلت سره امت ته نوې رڼا رسوي. 🌟"
     },
    "iftah": {
-  "title": "دار الافتاح",
+  "title":"دارالافتاء",
   "subtitle": "په دارالافتاح کې خپلې دیني پوښتنې وکړئ او د شرعي لارښوونو رڼا تر لاسه کړئ"
 },
     "sanad": {
